[package]
name = "neuralarena-cdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.3"
ic-cdk = {version = "0.12.1", optional = true}
serde = "1.0.190"
serde_json = "1.0.108"
rmp-serde = "1.1.2"
rand = "=0.8.5"
ulid = {version = "=1.1.0", features = [], default-features = false, optional = true}
wasm-bindgen = {version = "0.2.84", optional = true}
three-rs = {version = "0.1.0", path = "../three-rs", features = []}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "=0.2.12", features = ["custom"], optional = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = {version = "=0.2.12", optional = true}

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1

[features]
cppmalloc = []
random = ["dep:ic-cdk", "dep:getrandom"]
uniqueid = ["dep:ulid", "random"]
serdeser = ["dep:ic-cdk"]
db = ["serdeser"]
nn = []
js = ["dep:wasm-bindgen"]
default = []
